--- a/Final Project/Base.lproj/Main.storyboard
+++ b/Final Project/Base.lproj/Main.storyboard
@@ -723,9 +723,26 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </progressIndicator>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="240-IL-ISU">
-                                <rect key="frame" x="700" y="20" width="82" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <rect key="frame" x="699" y="20" width="82" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" allowsUndo="NO" borderStyle="bezel" alignment="center" title="120 FPS" usesSingleLineMode="YES" bezelStyle="round" id="xWO-Cf-kSB">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VTH-IB-tXD">
+                                <rect key="frame" x="108" y="14" width="585" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" tickMarkPosition="above" numberOfTickMarks="5" sliderType="linear" id="gbw-52-Tod"/>
+                                <connections>
+                                    <action selector="updateIsoValue:" target="XfG-lQ-9wD" id="xcP-1t-EUw"/>
+                                </connections>
+                            </slider>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iy6-eX-CxI">
+                                <rect key="frame" x="20" y="20" width="82" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" allowsUndo="NO" borderStyle="bezel" alignment="center" title="0" usesSingleLineMode="YES" bezelStyle="round" id="hbb-ZB-7S4">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -735,6 +752,8 @@
                     </view>
                     <connections>
                         <outlet property="fpsLabel" destination="240-IL-ISU" id="dlf-ZT-DhF"/>
+                        <outlet property="isoLabel" destination="Iy6-eX-CxI" id="Sbg-jd-jhs"/>
+                        <outlet property="isoSlider" destination="VTH-IB-tXD" id="Yp4-Oe-ec8"/>
                         <outlet property="progressBar" destination="8Hx-vz-33U" id="Ar6-j7-iBV"/>
                         <outlet property="progressStatis" destination="Tr1-qp-yUp" id="iBX-RS-BDr"/>
                         <outlet property="progressStatus" destination="Tr1-qp-yUp" id="jHn-oR-OJe"/>
