--- a/Final Project/Base.lproj/Main.storyboard
+++ b/Final Project/Base.lproj/Main.storyboard
@@ -711,16 +711,16 @@
                         <subviews>
                             <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tr1-qp-yUp">
                                 <rect key="frame" x="18" y="564" width="764" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Progress Status" id="I4d-it-Lm1">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <progressIndicator hidden="YES" fixedFrame="YES" maxValue="100" doubleValue="50" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="8Hx-vz-33U">
-                                <rect key="frame" x="20" y="537" width="760" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <progressIndicator hidden="YES" fixedFrame="YES" maxValue="100" doubleValue="50" indeterminate="YES" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="8Hx-vz-33U">
+                                <rect key="frame" x="20" y="536" width="761" height="34"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </progressIndicator>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="240-IL-ISU">
                                 <rect key="frame" x="699" y="20" width="82" height="22"/>
@@ -732,8 +732,8 @@
                                 </textFieldCell>
                             </textField>
                             <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VTH-IB-tXD">
-                                <rect key="frame" x="108" y="14" width="585" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="108" y="14" width="583" height="28"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <sliderCell key="cell" continuous="YES" state="on" alignment="left" tickMarkPosition="above" numberOfTickMarks="5" sliderType="linear" id="gbw-52-Tod"/>
                                 <connections>
                                     <action selector="updateIsoValue:" target="XfG-lQ-9wD" id="xcP-1t-EUw"/>
